forth fm-challenge complete

--- a/faq-accordion-main/src/output.css
+++ b/faq-accordion-main/src/output.css
@@ -814,7 +814,7 @@ p {
   }
 
   .sm\:bg-\[url\(\'\/assets\/images\/background-pattern-desktop\.svg\'\)\] {
-    background-image: url('/assets/images/background-pattern-desktop.svg');
+    background-image: url('./assets/images/background-pattern-desktop.svg');
   }
 
   .sm\:p-10 {
