--- a/news-homepage-main/Style.css
+++ b/news-homepage-main/Style.css
@@ -228,6 +228,7 @@ ul{
   right: 0;
   background-color: var(--Off_white);
   padding: 24px;
+  box-shadow: -120px 0px 0px rgb(0,0,0,0.6);
   z-index: 9;
 }
 .menu_button[aria-expanded="true"]{
