--- a/ecommerce-product-page-main/Style.css
+++ b/ecommerce-product-page-main/Style.css
@@ -73,6 +73,7 @@ header{
   justify-content: space-between;
   align-items: center;
   padding: 24px;
+  position: relative;
 }
 button{
   background: none;
@@ -345,7 +346,7 @@ ul{
   .show_menu{
     display: block;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     position: absolute;
     top: 0;
     left: 0;
